# CoTC-SpMM

./: CMakeLists.txt  README.md
baseline/: .gitignore  build.sh  eva.sh  setup.py
baseline/DTC-SpMM/: DTCSpMM.cpp  dataset.py  run_DTC_SpMM.py
baseline/FlashSparse/: setup.py
baseline/FlashSparse/eva/: spmm_fp16_test_args.py
baseline/FlashSparse/eva/fs_fp16/: mdataset2.py  test_fs.py
baseline/FlashSparse/src/Block_gpu/: block.cpp  block_kernel.cu
baseline/HC-SpMM-master/: seery_test.py
baseline/RoDe/: CMakeLists.txt
baseline/RoDe/eval/: CMakeLists.txt  eval_spmm_f32_n128.cu  eval_spmm_f32_n256.cu
baseline/RoDe/script/: eval.py
baseline/RoDe/spmm/: CMakeLists.txt
baseline/RoDe/utils/: matrix_utils.cu
baseline/TCGNN_kernel/: setup.py
baseline/cuSPARSE/: cuSPARSE_spmm.cu  eva.py  setup.py  spmm_csr.cpp
dlmc/: dlmc.csv
dlmc/rn50/extended_magnitude_pruning/0.8/: bottleneck_1_block_group1_1_1.mtx  bottleneck_1_block_group1_2_1.mtx  bottleneck_1_block_group2_1_1.mtx  bottleneck_1_block_group2_2_1.mtx  bottleneck_1_block_group2_3_1.mtx  bottleneck_1_block_group3_1_1.mtx  bottleneck_1_block_group3_2_1.mtx  bottleneck_1_block_group3_3_1.mtx  bottleneck_1_block_group3_4_1.mtx  bottleneck_1_block_group3_5_1.mtx  bottleneck_1_block_group4_1_1.mtx  bottleneck_1_block_group4_2_1.mtx  bottleneck_1_block_group_projection_block_group1.mtx  bottleneck_1_block_group_projection_block_group2.mtx  bottleneck_1_block_group_projection_block_group3.mtx  bottleneck_1_block_group_projection_block_group4.mtx  bottleneck_2_block_group1_1_1.mtx  bottleneck_2_block_group1_2_1.mtx  bottleneck_2_block_group2_1_1.mtx  bottleneck_2_block_group2_2_1.mtx  bottleneck_2_block_group2_3_1.mtx  bottleneck_2_block_group3_1_1.mtx  bottleneck_2_block_group3_2_1.mtx  bottleneck_2_block_group3_3_1.mtx  bottleneck_2_block_group3_4_1.mtx  bottleneck_2_block_group3_5_1.mtx  bottleneck_2_block_group_projection_block_group1.mtx  bottleneck_2_block_group_projection_block_group2.mtx  bottleneck_2_block_group_projection_block_group3.mtx  bottleneck_3_block_group1_1_1.mtx  bottleneck_3_block_group1_2_1.mtx  bottleneck_3_block_group2_1_1.mtx  bottleneck_3_block_group2_2_1.mtx  bottleneck_3_block_group2_3_1.mtx  bottleneck_3_block_group3_1_1.mtx  bottleneck_3_block_group3_2_1.mtx  bottleneck_3_block_group3_3_1.mtx  bottleneck_3_block_group3_4_1.mtx  bottleneck_3_block_group3_5_1.mtx  bottleneck_3_block_group4_1_1.mtx  (+8 more)
dlmc/rn50/extended_magnitude_pruning/0.91/: bottleneck_1_block_group1_1_1.mtx  bottleneck_1_block_group1_2_1.mtx  bottleneck_1_block_group2_1_1.mtx  bottleneck_1_block_group2_2_1.mtx  bottleneck_1_block_group2_3_1.mtx  bottleneck_1_block_group3_1_1.mtx  bottleneck_1_block_group3_2_1.mtx  bottleneck_1_block_group3_3_1.mtx  bottleneck_1_block_group3_4_1.mtx  bottleneck_1_block_group3_5_1.mtx  bottleneck_1_block_group4_1_1.mtx  bottleneck_1_block_group4_2_1.mtx  bottleneck_1_block_group_projection_block_group1.mtx  bottleneck_1_block_group_projection_block_group2.mtx  bottleneck_1_block_group_projection_block_group3.mtx  bottleneck_1_block_group_projection_block_group4.mtx  bottleneck_2_block_group1_1_1.mtx  bottleneck_2_block_group1_2_1.mtx  bottleneck_2_block_group2_1_1.mtx  bottleneck_2_block_group2_2_1.mtx  bottleneck_2_block_group2_3_1.mtx  bottleneck_2_block_group3_1_1.mtx  bottleneck_2_block_group3_2_1.mtx  bottleneck_2_block_group3_3_1.mtx  bottleneck_2_block_group3_4_1.mtx  bottleneck_2_block_group3_5_1.mtx  bottleneck_2_block_group4_1_1.mtx  bottleneck_2_block_group4_2_1.mtx  bottleneck_2_block_group_projection_block_group1.mtx  bottleneck_2_block_group_projection_block_group2.mtx  bottleneck_2_block_group_projection_block_group3.mtx  bottleneck_2_block_group_projection_block_group4.mtx  bottleneck_3_block_group1_1_1.mtx  bottleneck_3_block_group1_2_1.mtx  bottleneck_3_block_group2_1_1.mtx  bottleneck_3_block_group2_2_1.mtx  bottleneck_3_block_group2_3_1.mtx  bottleneck_3_block_group3_1_1.mtx  bottleneck_3_block_group3_2_1.mtx  bottleneck_3_block_group3_3_1.mtx  (+12 more)
dlmc/rn50/extended_magnitude_pruning/0.96/: bottleneck_1_block_group1_1_1.mtx  bottleneck_1_block_group1_2_1.mtx  bottleneck_1_block_group2_1_1.mtx  bottleneck_1_block_group2_2_1.mtx  bottleneck_1_block_group2_3_1.mtx  bottleneck_1_block_group3_1_1.mtx  bottleneck_1_block_group3_2_1.mtx  bottleneck_1_block_group3_3_1.mtx  bottleneck_1_block_group3_4_1.mtx  bottleneck_1_block_group3_5_1.mtx  bottleneck_1_block_group4_1_1.mtx  bottleneck_1_block_group4_2_1.mtx  bottleneck_1_block_group_projection_block_group1.mtx  bottleneck_1_block_group_projection_block_group2.mtx  bottleneck_1_block_group_projection_block_group3.mtx  bottleneck_1_block_group_projection_block_group4.mtx  bottleneck_2_block_group1_1_1.mtx  bottleneck_2_block_group1_2_1.mtx  bottleneck_2_block_group2_1_1.mtx  bottleneck_2_block_group2_2_1.mtx  bottleneck_2_block_group2_3_1.mtx  bottleneck_2_block_group3_1_1.mtx  bottleneck_2_block_group3_2_1.mtx  bottleneck_2_block_group3_3_1.mtx  bottleneck_2_block_group3_4_1.mtx  bottleneck_2_block_group3_5_1.mtx  bottleneck_2_block_group4_1_1.mtx  bottleneck_2_block_group4_2_1.mtx  bottleneck_2_block_group_projection_block_group1.mtx  bottleneck_2_block_group_projection_block_group2.mtx  bottleneck_2_block_group_projection_block_group3.mtx  bottleneck_2_block_group_projection_block_group4.mtx  (+20 more)
result/baseline/: DTC_256.csv  FlashSparse_256.csv  RoDe_128.csv  RoDe_256.csv  cuSPARSE_256.csv
src/: main.cu  makefile
src/Struct/: struct.h
src/include/: Liner_Library.cuh  Liner_Library.h  compare.h  compare_cu.cuh
src/log/: a.cpp  data.txt
src/log/reslut/: 1_251113.txt  2_251113.txt  suitesparse.txt
src/readMtx/: mmio.h  utils.h
src/spmm/: makefile  run.sh  spmm.cu  spmm.ncu-rep  suite.sh
src/spmm/kernel/: readme.md  spmm_cuda.cu  spmm_kernel.cu  spmm_kernel_V3_128x4.cu  spmm_kernel_async.cu  spmm_kernel_m16n8k8_cuda_shared.cu  spmm_kernel_m16n8k8_shared.cu  spmm_kernel_m8n8k4.cu  spmm_kernel_shared.cu  spmm_memory.cu  translations_HTC.cu
src/spmm/utils/: utils.cu
src/tmp/: config.txt
(+1789 files in other folders)
